# luproject_template

./: .gitignore  Makefile  README.md
config/: README.md  dummy.yaml
cpp/my_project/: CMakeLists.txt  LICENSE
cpp/my_project/apps/: CMakeLists.txt  main.cpp
cpp/my_project/cmake/: CompilerOptions.cmake  FunctionsDefinitions.cmake
cpp/my_project/core/: CMakeLists.txt  MyFunctions.cpp  MyFunctions.hpp  Provone.cpp  Provone.hpp
cpp/my_project_template/: CMakeLists.txt  README.md
cpp/my_project_template/apps/: CMakeLists.txt  main.cpp
cpp/my_project_template/cmake/: GlobalTargetProperty.cmake  StandardProjectOptions.cmake
cpp/my_project_template/core/: CMakeLists.txt  MyFunctions.cpp
python/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
python/my_project/: MANIFEST.in  example.py  my_package.py
python/my_project/pybind/: CMakeLists.txt  my_project_pybind.cpp
python/my_project_template/: __init__.py  my_package.py
python/my_project_template/pybind/: CMakeLists.txt  my_project_pybind.cpp  my_project_template_pybind.cpp
