[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "my_project"
version = "0.1.0"
description = "Add a description of your python package."
readme = "README.md"
authors = [
    { name = "Luca Lobefaro", email = "luca.lobefaro95@gmail.com" },
]
requires-python = ">=3.7"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = false
cmake.minimum-version = "3.16"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true
sdist.exclude = ["my_project/"] # Exclude the pybind code from the wheel
wheel.install-dir = "my_project/pybind/"
